[gd_scene load_steps=30 format=3 uid="uid://0upble6y4iu6"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_48mg1"]
[ext_resource type="Texture2D" uid="uid://c8vt5dpwcaq34" path="res://assets/player/armBack.png" id="1_f12gu"]
[ext_resource type="Texture2D" uid="uid://cmdfn3hbomrvn" path="res://assets/player/legBack.png" id="2_2jf7f"]
[ext_resource type="PackedScene" uid="uid://c7j6jgqb5a703" path="res://scenes/player_aoe_attack.tscn" id="2_8qw23"]
[ext_resource type="Texture2D" uid="uid://byuviv3mdr0pe" path="res://assets/player/torso.png" id="3_ubn8w"]
[ext_resource type="PackedScene" uid="uid://bf0ceon2od7sf" path="res://scenes/player_bullet.tscn" id="3_wynmc"]
[ext_resource type="Texture2D" uid="uid://7tuydk1vohe5" path="res://assets/player/head.png" id="4_8dcyw"]
[ext_resource type="Script" path="res://scripts/player_input.gd" id="4_ekqwf"]
[ext_resource type="Texture2D" uid="uid://dn3vltlxxv0k2" path="res://assets/player/legFront.png" id="5_h6d54"]
[ext_resource type="Texture2D" uid="uid://bt64yvgv4a1ke" path="res://assets/player/armFront.png" id="6_rqt5e"]
[ext_resource type="Texture2D" uid="uid://c1r6pj5yksvu" path="res://assets/player/donut.png" id="8_5o2e1"]
[ext_resource type="Texture2D" uid="uid://6ybeiiwy8kwd" path="res://assets/player/pointBlank.png" id="9_vqaj3"]
[ext_resource type="Texture2D" uid="uid://dhawihxgd73uy" path="res://assets/player/attack1Button.png" id="12_xwfgm"]
[ext_resource type="Texture2D" uid="uid://dneqtf6h0npdk" path="res://assets/player/buttonProgress.png" id="13_xan6u"]
[ext_resource type="Texture2D" uid="uid://cjql4yj0v6g7e" path="res://assets/player/attack2Button.png" id="14_ixbpu"]
[ext_resource type="Texture2D" uid="uid://bjccsac6ycahr" path="res://assets/player/attack3Button.png" id="15_fdkj7"]
[ext_resource type="Texture2D" uid="uid://g1buc5dhtjqu" path="res://assets/player/defensiveButton.png" id="16_s6eu5"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gkiod"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:player")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:can_attack")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:can_move")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:player_array_id")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6efnp"]
properties/0/path = NodePath("PlayerInput:direction")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerInput:attack1")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerInput:attack2")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerInput:attack3")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("PlayerInput:defensive")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="Animation" id="Animation_maaag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts/ArmBack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parts/LegBack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parts/ArmFront:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Parts/LegFront:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Parts:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i41w3"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts/ArmBack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parts/LegBack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parts/LegFront:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Parts/ArmFront:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_pm45i"]
resource_name = "move_backward"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts/ArmBack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.261799]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parts/LegBack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parts/LegFront:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.261799]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Parts/ArmFront:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.261799]
}

[sub_resource type="Animation" id="Animation_ox0hf"]
resource_name = "move_forward"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts/ArmBack:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.296706]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Parts/LegBack:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.296706]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Parts/ArmFront:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.296706]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Parts/LegFront:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.296706]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ccwqn"]
_data = {
"RESET": SubResource("Animation_maaag"),
"idle": SubResource("Animation_i41w3"),
"move_backward": SubResource("Animation_pm45i"),
"move_forward": SubResource("Animation_ox0hf")
}

[sub_resource type="Animation" id="Animation_47cv1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7gqvs"]
resource_name = "damaged"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_67wpu"]
resource_name = "defensive"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Parts:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_brprl"]
_data = {
"RESET": SubResource("Animation_47cv1"),
"damaged": SubResource("Animation_7gqvs"),
"defensive": SubResource("Animation_67wpu")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_vsph0"]
radius = 58.0086

[node name="Player" type="Area2D" groups=["player"]]
position = Vector2(1030, 488)
scale = Vector2(0.2, 0.2)
script = ExtResource("1_48mg1")
player_aoe_attack_node = ExtResource("2_8qw23")
player_bullet_node = ExtResource("3_wynmc")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_gkiod")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6efnp")
script = ExtResource("4_ekqwf")

[node name="Parts" type="Node2D" parent="."]

[node name="ArmBack" type="Sprite2D" parent="Parts"]
position = Vector2(72, -63)
texture = ExtResource("1_f12gu")
centered = false
offset = Vector2(-75, -75)

[node name="LegBack" type="Sprite2D" parent="Parts"]
position = Vector2(36, 92)
texture = ExtResource("2_2jf7f")
centered = false
offset = Vector2(-75, -25)

[node name="Torso" type="Sprite2D" parent="Parts"]
position = Vector2(-6, -6)
texture = ExtResource("3_ubn8w")

[node name="Head" type="Sprite2D" parent="Parts"]
position = Vector2(3, -107)
texture = ExtResource("4_8dcyw")
centered = false
offset = Vector2(-200, -300)

[node name="LegFront" type="Sprite2D" parent="Parts"]
position = Vector2(-65, 112)
texture = ExtResource("5_h6d54")
centered = false
offset = Vector2(-75, -40)

[node name="ArmFront" type="Sprite2D" parent="Parts"]
position = Vector2(-81, -55)
texture = ExtResource("6_rqt5e")
centered = false
offset = Vector2(-75, -75)

[node name="MovementAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ccwqn")
}

[node name="ColorAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_brprl")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vsph0")

[node name="Normal" type="Sprite2D" parent="CollisionShape2D"]
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(1, 1)
scale = Vector2(0.28, 0.28)
texture = ExtResource("8_5o2e1")

[node name="Tight" type="Sprite2D" parent="CollisionShape2D"]
visible = false
modulate = Color(1, 1, 1, 0.784314)
position = Vector2(-0.499998, 0.5)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_vqaj3")

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[node name="GCDTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DefensiveCDTimer" type="Timer" parent="."]
one_shot = true

[node name="Attack1ProgressBar" type="TextureProgressBar" parent="."]
offset_left = -539.0
offset_top = 64.3333
offset_right = -419.0
offset_bottom = 184.333
fill_mode = 4
texture_under = ExtResource("12_xwfgm")
texture_progress = ExtResource("13_xan6u")

[node name="Attack2ProgressBar" type="TextureProgressBar" parent="."]
offset_left = -417.667
offset_top = 183.667
offset_right = -297.667
offset_bottom = 303.667
fill_mode = 4
texture_under = ExtResource("14_ixbpu")
texture_progress = ExtResource("13_xan6u")

[node name="Attack3ProgressBar" type="TextureProgressBar" parent="."]
offset_left = -297.333
offset_top = 64.3333
offset_right = -177.333
offset_bottom = 184.333
fill_mode = 4
texture_under = ExtResource("15_fdkj7")
texture_progress = ExtResource("13_xan6u")

[node name="DefensiveProgressBar" type="TextureProgressBar" parent="."]
offset_left = -417.667
offset_top = -57.0
offset_right = -297.667
offset_bottom = 63.0
fill_mode = 4
texture_under = ExtResource("16_s6eu5")
texture_progress = ExtResource("13_xan6u")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="timeout" from="InvulnTimer" to="." method="_on_invuln_timer_timeout"]
